[package]
name = "gng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde_json = "1.0.78"
strum = { version = "0.23.0", features = ["derive"] }
termion = "1.5.6"
unicode-width = "0.1.9"
url = "2.2.2"
